# ros2-ml-accelerator-pipeline

./: .gitignore  CMakeLists.txt  README.md  build.sh  kill.sh  package.xml  run.sh
YoloX_modification_for_my_case/example/custom/: yolox_nano_pallet.py  yolox_nano_pallet_test_inference.py
YoloX_modification_for_my_case/example/custom/test_outputs/: predictions.json
include/mlsoc/: helpers.hpp
memory/: CMakeLists.txt
memory/include/: memory_dms.hpp  memory_ev74.hpp  memory_generic.hpp  memory_interface.hpp  message_pool_ext.hpp
nodes/include/: allegro_decoder.hpp  allegro_encoder.hpp  boxdecode.h  boxdecoder.hpp  boxrender.h  genericrender.hpp  overlay.hpp  process_sima.hpp  process_sima_yolopose.hpp  processcvu.hpp  processmla.hpp  usb_camera.hpp  utils.hpp  yolopose_render.hpp
nodes/src/: allegro_encoder.cpp  boxdecoder.cpp  decoder.cpp  genericrender.cpp  mla_processing.cpp  overlay.cpp  processcvu.cpp  ps.cpp  psy.cpp  usb_camera.cpp  yolopose_render.cpp
